Google Java Style のフォーマッティングが正常に動作するように修正 (#3718)
* xmlのパスを修正

* 不要なxmlの記載を削除

* accountingフォルダを修正

* applicationserviceを修正

* assetsフォルダを修正

* authorizationの修正

* basketsの修正

* catalogの修正

* 自動識別をoffに変更

* constantの修正

* orderを修正

* アプリケーションコアのテストを修正

* batchの修正

* インフラストラクチャ層の修正

* システム共通を修正

* webの修正

* web-adminのcontroller以外を修正

* web-adminのコントローラーを修正

* web-adminの残りの修正

* web-consumerの修正

* Checkstyleの警告に対応

* 設定ファイルを更新

* azureadb2cサンプルを更新

* dressca-cmsの修正

* dressca-backend/application-coreの追加修正

* dressca-backend/application-coreのテストの修正

* dressca-backend/batchの追加修正

* dressca-backend/system-commonの追加修正

* dressca-backend/webの追加修正

* dressca-backend/web-adminのコントローラー以外を修正

* dressca-backend/web-consumerのコントローラー以外を修正

* CatalogItemMapperのコードフォーマットを改善

* dressca-backend/webの追加修正

* 買い物かごからカタログアイテムを削除するメソッドのJavaDocを修正

* auth-backendの修正

* フォーマット設定ファイルのコメントの微調整

* google style との差分をコメントで追記

* アプリケーションコアの修正

* バッチの修正

* インフラ層の修正

* webの修正

* web-adminとweb-consumerの修正

* google java style を適用

* dressca-backendの追加修正

* auth-backendの追加修正

* dressca-cmsの追加修正

* Eclipseフォーマッターに対応するためのコード整形